--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,7 +7,7 @@ html {
 body {
 	padding: 0;
 	margin: 0;
-	background-color: #16151a;
+	background-color: white;
 	font-family: "Noto Sans KR", sans-serif;
 }
 h1 {
